--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
   <html>
+    <head>
+      <meta charset="UTF-8" />
+      <base href="/csp/" />
+      <link rel="stylesheet" href="css/csp.css" />
+    </head>
+    
     <body>
-      <title>Dogs are the Best!</title>
-      <h1>Dogs are the best!!!</h1>
-      <h2>Why dogs are <em>the best</h2></em>
-      <p>
-        <ul>
-          <li>Doggos are happy & cuddly</li>
-          <li>Doggos make people happy too</li>
-          <li>They're obviously the best</li>
-        </ul>
-      </p>
-      <h2>Did you know?</h2>
-      Doggies are the best
-      <h2>Dog pictures:</h2>
-      <img src="images/puppy-mowgli.jpg"></img>
-      <img src="images/moar-puppy-mowgli.jpg"></img>
+      <title>Creative Student Portfolio</title>
+      <h1>hello world!</h1>
     </body>
   </html>
 </!DOCTYPE>
