--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <meta charset="UTF-8" />
+      <title>Creative Student Portfolio</title>
       <base href="/csp/" />
       <link rel="stylesheet" href="css/csp.css" />
     </head>
