--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     
     <body>
-      <title>Creative Student Portfolio</title>
+      <title>Work in Progress</title>
       <h1>hello world!</h1>
     </body>
   </html>
