--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     </head>
     
     <body>
-      <title>Work in Progress</title>
-      <h1>hello world!</h1>
+      <h1 class="title">Work in Progress</h1>
+      <h2>hello world!</h2>
     </body>
   </html>
 </!DOCTYPE>
