--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <body>
       <h1 class="title">Work in Progress</h1>
-      <h2>hello world!</h2>
+      <h2>hello worlds!</h2>
     </body>
   </html>
 </!DOCTYPE>
